# aoc-python-2025

./: .mypy.ini  README.md  pyproject.toml  run.bat
src/: utils.py
src/days/day01/: a.py  b.py  test_examples.py
src/days/day02/: a.py  b.py  test_examples.py
src/days/day03/: a.py  b.py  test_examples.py
src/days/day04/: a.py  b.py  test_examples.py
src/days/day05/: a.py  b.py  test_examples.py
src/days/day06/: a.py  b.py  test_examples.py
src/days/day07/: a.py  b.py  test_examples.py
src/days/day08/: a.py  b.py  test_examples.py
src/templates/day/: a.py  b.py  test_examples.py
